--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export("%>%")
 export(fmt_fix_digits)
 export(fmt_leading_zero)
 export(fmt_minus_sign)
+export(fmt_replace_na)
 importFrom(magrittr,"%>%")
