--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export("%>%")
 export(fmt_fix_digits)
 export(fmt_leading_zero)
 export(fmt_minus_sign)
+export(fmt_p_value)
 export(fmt_replace_na)
 importFrom(magrittr,"%>%")
