--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(fmt_leading_zero)
 export(fmt_minus_sign)
 export(fmt_p_value)
 export(fmt_replace_na)
+export(str_tokenize)
 importFrom(magrittr,"%>%")
