pretty_lme4_ranefs()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(fmt_leading_zero)
 export(fmt_minus_sign)
 export(fmt_p_value)
 export(fmt_replace_na)
+export(pretty_lme4_ranefs)
 export(str_replace_same_as_previous)
 export(str_tokenize)
 importFrom(magrittr,"%>%")
