--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,9 @@ Suggests: testthat
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
 Imports: magrittr,
-    stringr
     stringr,
+    lme4,
     dplyr,
+    tidyr,
+    stats,
+    tibble
