--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fmt_fix_digits)
 export(fmt_leading_zero)
 export(fmt_minus_sign)
 export(fmt_p_value)
+export(fmt_p_value_md)
 export(fmt_replace_na)
 export(pretty_lme4_ranefs)
 export(str_replace_same_as_previous)
