--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,13 @@ Encoding: UTF-8
 LazyData: true
 Suggests: testthat
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.0.1
-Imports: magrittr,
+RoxygenNote: 6.1.1
+Imports: 
+    magrittr,
     stringr,
     lme4,
     dplyr,
     tidyr,
     stats,
-    tibble
+    tibble,
+    scales
