--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: printy
 Title: Helper functions for pretty-printing numbers
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: person("TJ", "Mahr", email = "tristan.mahr@gmail.com", role = c("aut", "cre"))
 Description: This package contains helper functions for formatting numbers.
 Depends: R (>= 3.4.0)
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: 
+    testthat,
+    pbkrtest
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 Imports: 
@@ -20,4 +22,7 @@ Imports:
     tibble,
     scales,
     broom,
-    glue
+    glue,
+    broom.mixed,
+    sjstats,
+    rlang
