--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(fmt_replace_na)
 export(pretty_lme4_ranefs)
 export(skel_conf_interval)
 export(skel_conf_interval_v)
+export(skel_stat_n_value)
 export(str_replace_same_as_previous)
 export(str_tokenize)
 importFrom(magrittr,"%>%")
