--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(skel_conf_interval_v)
 export(skel_stat_n_value)
 export(str_replace_same_as_previous)
 export(str_tokenize)
+export(super_split)
 importFrom(magrittr,"%>%")
