fix package check warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,12 @@ export(str_replace_same_as_previous)
 export(str_tokenize)
 export(super_split)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(rlang,as_label)
+importFrom(rlang,as_name)
+importFrom(rlang,enquo)
+importFrom(rlang,enquos)
+importFrom(rlang,expr)
+importFrom(rlang,sym)
+importFrom(rlang,syms)
