--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
     testthat,
-    pbkrtest
+    pbkrtest,
+    roxygen2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
@@ -24,5 +25,6 @@ Imports:
     broom,
     glue,
     broom.mixed,
-    rlang,
-    parameters
+    rlang (>= 0.1.2),
+    parameters,
+    purrr
