--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(fmt_p_value_md)
 export(fmt_replace_na)
 export(pretty_lme4_ranefs)
 export(skel_conf_interval)
-export(skel_conf_interval_v)
-export(skel_stat_n_value)
+export(skel_conf_interval_pair)
+export(skel_stat_n_value_pair)
 export(str_replace_same_as_previous)
 export(str_tokenize)
 export(super_split)
