--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,14 @@
 Package: printy
 Title: Helper functions for pretty-printing numbers
 Version: 0.0.0.9003
-Authors@R: person("TJ", "Mahr", email = "tristan.mahr@gmail.com", role = c("aut", "cre"))
+Authors@R: 
+    person(
+      given = "Tristan",
+      family = "Mahr",
+      role = c("aut", "cre"),
+      email = "tristan.mahr@wisc.edu",
+      comment = c(ORCID = "0000-0002-8890-5116")
+    )
 Description: This package contains helper functions for formatting numbers.
 Depends: R (>= 3.4.0)
 License: GPL-3 + file LICENSE
