--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(fmt_p_value)
 export(fmt_p_value_md)
 export(fmt_replace_na)
 export(pretty_lme4_ranefs)
+export(skel_ci)
 export(skel_conf_interval)
 export(skel_conf_interval_pair)
 export(skel_range)
 export(skel_range_pair)
+export(skel_se)
 export(skel_stat_n_value_pair)
 export(str_replace_same_as_previous)
 export(str_tokenize)
